# practical-dsa

./: .gitignore  CMakeLists.txt  pyproject.toml
C01-data-structures/01-linked-lists/: linear-singly-linked-list.cpp
ds/c/: CMakeLists.txt  LinearSinglyLL.c
ds/c/header/: CircularDoublyLL.h  CircularSinglyLL.h  InputGenerator.h  LinearDoublyLL.h  LinearSinglyLL.h
ds/c/src/: CircularDoublyLL.c  CircularSinglyLL.c  LinearDoublyLL.c  LinearSinglyLL.c
ds/c/utils/: InputGenerator.c
ds/cpp/: CMakeLists.txt  LinearSinglyLL.cpp
ds/csharp/: Program.cs
ds/dart/: LinearSinglyLL.dart
ds/go/: LinearSinglyLL.go
ds/java/: LinearSinglyLL.java
ds/javascript/: LinearSinglyLL.js
ds/python/: LinearSinglyLL.py
ds/ruby/: LinearSinglyLL.ru
ds/rust/: Cargo.toml  LinearSinglyLL.rs
ds/scala/: LinearSinglyLL.scala
ds/scala/.bsp/: scala.json
ds/scala/.scala-build/.bloop/: scala_80832bad4d-7ebb0b4a41.json
ds/scala/.scala-build/.bloop/scala_80832bad4d-7ebb0b4a41/bloop-internal-classes/main-ZtxC5n4xTGqF7nvqm5AAJA==/: LinkedList.tasty  SinglyLinkedList.tasty
ds/scala/.scala-build/scala_80832bad4d-7ebb0b4a41/classes/main/: Node.tasty
ds/swift/: LinearSinglyLL.swift
