[project]
name = "dsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    "ds/c",
]
